[gd_scene load_steps=6 format=2]

[ext_resource path="res://Kodlar/Main.gd" type="Script" id=1]
[ext_resource path="res://Sahneler/Block.tscn" type="PackedScene" id=2]
[ext_resource path="res://Savec-gxew6.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
extra_spacing_top = 20
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 16.0
margin_right = 680.0
margin_bottom = 1424.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 360, 720 )
rotating = true
current = true
zoom = Vector2( 2, 2 )

[node name="Block" parent="." instance=ExtResource( 2 )]
position = Vector2( 296, 80 )

[node name="Block2" parent="." instance=ExtResource( 2 )]
position = Vector2( 232, 80 )

[node name="Block3" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 80 )

[node name="Block4" parent="." instance=ExtResource( 2 )]
position = Vector2( 424, 80 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 40, 272, 680, 272 )
default_color = Color( 0.960784, 0.282353, 0.313726, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 496.0
margin_top = 8.0
margin_right = 680.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Limiter" type="StaticBody2D" parent="."]
position = Vector2( 360, 1440 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limiter"]
shape = SubResource( 2 )
